# Sovarian

./: CMakeLists.txt
src/: main.cpp
src/game/: game.cpp  game.h
src/game/timing/: limiter.h  literals.h  timeit.h  timer.h
src/game/windowing/: window.h
src/platform/: sleep.h
src/rendering/: render_system.h
src/rendering/dx12/: render_system_dx12.cpp  render_system_dx12.h
src/rendering/metal/: render_system_metal.cpp  render_system_metal.h
